--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -3,8 +3,8 @@
     version: '3'
     services:
       nginx: 
-        image: ve-nginx-reverseproxy:latest
-        container_name: production_nginx
+        image: nginx:latest
+        container_name: ve_production_nginx
         volumes:
           - ./nginx.conf:/etc/nginx/nginx.conf
         ports:
