--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,84 @@
     events {
 
     }
+stream{
+    upstream stream_orientdb{
+                server 127.0.0.1:2424;
+        }
+        server{
+                listen 8081;
+                proxy_connect_timeout 5s;
+                proxy_timeout 20s;
+                proxy_pass stream_orientdb;
+        }
+}
     http {
+      sendfile on;
+      tcp_nopush on;
       server {
         error_log /etc/nginx/error_log.log warn;
         client_max_body_size 20m;
     
-        server_name 192.168.2.51;
+        server_name 192.168.2.46;
 
-        location /yourService1 {
-          proxy_pass http://192.168.2.51:8080;
-          rewrite ^/yourService1(.*)$ $1 break;
+        location /studio {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
+        
+        location /supportedLanguages {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
+        location /sso {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
+        location /disconnect {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
+        location /command {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
+        location /connect {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
+        location /database {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
+        location /server {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        
+        }
+        location /listDatabases {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        
+        }
+        
+        location /redmine {
+          proxy_pass http://192.168.2.230:30002/;
+          rewrite ^/redmine(.*)$ $1 break;
         }
 
-        location /yourService2 {
-          proxy_pass http://192.168.2.51:8080;
-          rewrite ^/yourService1(.*)$ $1 break;
-        }
+#        location /yourService2 {
+#          proxy_pass http://192.168.2.51:8080;
+#          rewrite ^/yourService1(.*)$ $1 break;
+#        }
       }
 
     }
