--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,12 @@ stream{
           proxy_http_version 1.1;
 #           rewrite ^/studio(.*)$ /studio$1 break;
         }
+
+        location /document {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
         location /sso {
           proxy_pass http://192.168.2.46:2480;
           proxy_http_version 1.1;
