--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,6 +69,12 @@ stream{
 #           rewrite ^/studio(.*)$ /studio$1 break;
         
         }
+        location /gephi {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        
+        }
         location /listDatabases {
           proxy_pass http://192.168.2.46:2480;
           proxy_http_version 1.1;
