--- a/mysql/Docker-Compose.yml
+++ b/mysql/Docker-Compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       TZ: Europe/Berlin
       #MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+      # OLD my-secret-pw
       MYSQL_ROOT_PASSWORD: p
       MYSQL_DATABASE: user
       MYSQL_USER: user
