--- a/orientdb/orientdb.service
+++ b/orientdb/orientdb.service
@@ -4,8 +4,11 @@ After=network.target
 # After=syslog.target
 
 [Service]
-ExecStart=/home/pi/orientdb/orientdb-tp3-3.1.6/bin/server.sh 
-ExecStop=/home/pi/orientdb/orientdb-tp3-3.1.6/bin/shutdown -p p
+ExecStart=/home/pi/xaas/orientdb/orientdb-tp3-3.1.6/bin/server.sh 
+ExecStop=/home/pi/xaas/orientdb/orientdb-tp3-3.1.6/bin/shutdown -p p
+# ExecStart=/home/pi/xaas/orientdb/orientdb-tp3-3.1.10/bin/server.sh 
+# ExecStop=/home/pi/xaas/orientdb/orientdb-tp3-3.1.10/bin/shutdown -p p
+
 # User=pi
 
 
