--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ mysql/mariadb/ib_buffer_pool
 mysql/mariadb/ib_logfile0
 mysql/mariadb/ibdata1
 mysql/mariadb/ibtmp1
+orientdb/orientdb-tp3-3.1.6/
+orientdb/orientdb-tp3-3.1.6.zip
