--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ stream{
         client_max_body_size 20m;
     
         server_name 192.168.2.46;
-
+# reverse Proxy OrientDB start 
         location /studio {
           proxy_pass http://192.168.2.46:2480;
           proxy_http_version 1.1;
@@ -81,10 +81,17 @@ stream{
 #           rewrite ^/studio(.*)$ /studio$1 break;
         
         }
-        
+# reverse Proxy OrientDB ende 
+
         location /redmine {
           proxy_pass http://192.168.2.230:30002/;
           rewrite ^/redmine(.*)$ $1 break;
+        }
+        
+        location /grafana {
+          proxy_pass http://192.168.2.43:3000;
+          proxy_http_version 1.1;
+#          rewrite ^/redmine(.*)$ $1 break;
         }
 
 #        location /yourService2 {
