new reverse peoxy orient db

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,6 +26,12 @@ stream{
           proxy_http_version 1.1;
 #           rewrite ^/studio(.*)$ /studio$1 break;
         }
+# reverse Proxy OrientDB Data export  
+        location /export {
+          proxy_pass http://192.168.2.46:2480;
+          proxy_http_version 1.1;
+#           rewrite ^/studio(.*)$ /studio$1 break;
+        }
         
         location /supportedLanguages {
           proxy_pass http://192.168.2.46:2480;
