--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -2,7 +2,14 @@ version: "2"
 
 services:
   grafana:
+    restart: unless-stopped
     image: grafana/grafana
     ports:
       - 3000:3000
-
+    environment:
+      GF_SMTP_ENABLED: "true"
+      GF_SMTP_HOST: "192.168.2.240:25"
+      GF_SMTP_USER: "engels"
+      GF_SMTP_PASSWORD: "p"
+      GF_SMTP_SKIP_VERITY: "true"
+      GF_SMTP_FROM_ADRESS: "grafana@softwareengel.de"
